# MoonAgent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
.claude/skills/jina-ai-skill/: SKILL.md
.claude/skills/lark-docx/: SKILL.md
.claude/skills/lark-message/: SKILL.md
.claude/skills/markitdown/: SKILL.md
.claude/skills/moon-cron/: SKILL.md
.claude/skills/moon-lark-docx/: SKILL.md
.claude/skills/moon-lark-message/: SKILL.md
.claude/skills/moon-task/: SKILL.md
.claude/skills/moon-task/examples/: hello-world.TASK.md  lunar-mission.TASK.md
.claude/skills/moon-task/scripts/: task_runner.py  test_examples.py
channels/: __init__.py
channels/lark/: README.md  __init__.py  receive.py  reply_plain.py  reply_stream.py  resource.py  richtext.py  tool_docs.py
channels/shell/: __init__.py
